# waypoint_navigation

./: CMakeLists.txt  README.md  package.xml
launch/: APtag_ros.launch  frame_node.launch  gazebo_px4.launch  main.launch  mavros_reality.launch  mavros_simulation.launch  my_world.launch  offb_node.launch  offboard_node.launch  openmmv_node.launch  reality.launch  usb_cam_node.launch  waypoint_node.launch
models/APtag0/: model.sdf
models/APtag0/materials/scripts/: repeated0.material
models/APtag1/: model.config  model.sdf
models/APtag1/materials/scripts/: repeated1.material
models/APtag2/: model.config  model.sdf
models/APtag2/materials/scripts/: repeated2.material
src/: Save_3_modes.cpp  Save_just_to_be_sure.txt  Save_just_to_be_sure2.txt  Works.txt  frame_node.py  offb_node (copy).cpp  offb_node.cpp  offb_node.h  offb_nodeM2.cpp  offb_nodeM2.h  offb_node_3M.cpp  offb_node_M1.cpp  offb_node_test_inutile.cpp  offboard_node.py  openmv_node.py  waypoint_node.py
world/: Start_detect_one_AP.world  solar_panels.world  solar_panels_without_AP.world  square_setup.world  square_setup_with_Box_AP.world  table_test.world
world/Todelete/: AP_square_setup.world  Start_detect_one_AP.world  Start_detect_one_AP_without.world  Start_detect_one_AP_without2.world  Test_for_forum.world  empty_world.world  etrange.world  one_AP_test.world  solar_panels_with_AP.world  square_setup_one_AP.world  square_setup_with_4AP.world  square_setup_with_AP.world  test_texture.world
